--- a/.htaccess
+++ b/.htaccess
@@ -3,30 +3,17 @@ RewriteEngine On
 RewriteBase /tuossogfinal/
 Options -Multiviews
 
-#RewriteRule ^login$ login.php [L]
-
-#RewriteCond %{HTTP_HOST} ^www.(.+)
-#RewriteCond %{HTTPS}s/%1 ^(on(s)|offs)/(.+)
-#RewriteRule ^ http%2://%3%{REQUEST_URI} [L,R=301]
-
-#RewriteCond %{REQUEST_FILENAME} !-d
-#RewriteCond %{REQUEST_FILENAME}.php -f
-#RewriteRule ^(.*)$ $1.php
-
-#RewriteCond %{SCRIPT_FILENAME} !-d
-#RewriteRule ^([^\.]+)$ $1.php [NC,L]
 RewriteRule ^([a-zA-Z0-9_-\s]+)/?([a-zA-Z0-9_-\s]+)?/?([a-zA-Z0-9_-\s]+)?$ index.php?page=$1&param=$2&param2=$3
 <IfModule mod_deflate.c>
-    #The following line is enough for .js and .css
     AddOutputFilter DEFLATE js css
-    AddOutputFilterByType DEFLATE text/plain text/xml application/xhtml+xml text/css application/xml application/rss+xml application/atom_xml application/x-javascript application/x-httpd-php application/x-httpd-fastphp text/html
+    AddOutputFilterByType DEFLATE text/text text/html text/plain text/xml text/css application/x-javascript application/javascript
  
     #The following lines are to avoid bugs with some browsers
     BrowserMatch ^Mozilla/4 gzip-only-text/html
     BrowserMatch ^Mozilla/4\.0[678] no-gzip
     BrowserMatch \bMSIE !no-gzip !gzip-only-text/html 
 </IfModule>
- 
+
 # BEGIN EXPIRES
 <IfModule mod_expires.c>
     ExpiresActive On
